# italian-tedx-rag

./: .gitignore  LICENSE  docker-compose.yml  readme.md  ruff.toml
data_loader/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
data_loader/src/: handler.py  main.py
data_loader/src/clients/: chroma.py  openai.py
data_loader/src/components/: documents.py  llm.py  text_splitter.py  vector_store.py
data_loader/tests/: client_chromadb.py  client_openai.py  components_documents.py  components_embeddings.py  components_text_splitter.py  components_vector_store.py
query_engine/: Dockerfile  entrypoint.sh  pyproject.toml
query_engine/src/: handler.py  interfaces.py  main.py
query_engine/src/components/: embeddings.py  vector_store.py
query_engine/tests/: components_llm.py  components_vector_store.py
transcripts/: 360 GRADI DI ASCOLTO ｜ Marta Tortia ｜ TEDxTorino [Aj5Eewf_5ug].txt  5 MINUTI_REDUX ｜ Luca Colli ｜ TEDxYouth@ITTColombo [DiXah2D0rMY].txt  7 fiori per la Felicità  ｜ Gianclaudio Caretta ｜ TEDxLUMSA [0SyEo8XXjOs].txt  A garanzia dei diritti ｜ Maruska Palazzi ｜ TEDxPantano [98vDrhGaIh8].txt  A passeggio nel queer ｜ Lorenzo Piccolo ｜ TEDxPutignano [-B6CP7KUKW4].txt  AI DIXIT： L'intelligenza artificiale e il futuro dell'umanità ｜ Cristina Pozzi ｜ TEDxBelluno [bP5fYGPaKQ8].txt  Abbattere le barriere： la mia conquista della finanza ｜ Andreea Timus ｜ TEDxEmpoliWomen [W7c51hC55zo].txt  Abracadabra e le altre parole magiche per navigare nella vita ｜ Francesco Tesei ｜ TEDxCesena [yhbUnkuIsy0].txt  Chimera ｜ Marta Viola ｜ TEDxPescara [hqCh2KuFDCI].txt  (+310 more)
